# redeslab2

./: .gitignore  Guia_HFTP_Tor.md  Makefile  client.py  connection.py  constants.py  grade.py  pyproject.toml  requirements.in  requirements.txt  server-test.py  server.py  test_metrics.py
scripts/tor/: get_onion_hostname.sh  run_client_tor.sh  run_server_tor.sh  setup_tor_hftp.sh  test_tor_e2e.sh
tests/: test_tor_hftp.py
