[project]
name = "lab2-hftp"
version = "0.1.0"
description = "Lab 2 — Servidor HFTP (kickstart)"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["server-test.py", "test_metrics.py"]
python_functions = "test_*"

[tool.coverage.run]
source = ["connection", "server"]
omit = ["server-test.py", "test_metrics.py", "grade.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "C4",
]
ignore = [
    "E501",
    "W191",
]
